notes and station update, need to fix left right station alignment

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -353,7 +353,7 @@
 #station_oakl { 
 	position: absolute; 
 	top: 53%;
-	left: 35%;
+	left: 37%;
 	.stationLink {
 		font-size: 0.9em;
 	}
